welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: ')' expected but ';' found.
fleur(Color.red; Color.yellow);
               ^FlowerPot:3: error: ';' expected but ')' found.
fleur(Color.red; Color.yellow);
                             ^